* Added "cvc set" command to change files between binary and text mode.

Changes in @NEW@:
  o Client Changes:
    * The "--debug" command line flag now provides information that is
      useful to the end-user on update.  The "--debug=all" flag will
      provide output that is useful to conary developers.  A side
      effect of this change affects the "cvc" command line.  To use
      the "--resume" command line argument to specify that you wish to
      resume at a particular location, you must use "--resume=<loc>".
      "--resume <loc>" will not work anymore.  This removes an
      ambiguity in how we parse optional parameters in Conary.
    * The output of --debug has been modified when performing
      dependency resolution - The output should be more helpful to end
      users.  Also rearranged the output given when dependencies
      fail. (CNY-779)
    * cvc merge and cvc update are now more verbose when patching. (CNY-406)
    * cvc clone now requires that you specify a message when cloning source
      components unless you specify --message.  It also gives more output
      about what it is doing (CNY-766, CNY-430).
    * cvc clone now has a --test parameter that runs through all steps of
      cloning without performing the clone.  --info is now more lightweight -
      it no longer downloads all of the file contents that would be cloned.
    * Components that modify the same files are now required to be in the 
      same update job (for example, if a file moves from package a to
      package b, we make the erase of package a and the install of package
      b will occur at the same time) (CNY-758).
    * Paths moving between troves as part of a single job are now treated
      as file updates instead of separate add/remove events (CNY-750,
      CNY-786, CNY-359)
    * Entitlements can be passed into ConaryClient and NetworkRepositoryClient
      objects directly (CNY-640)
    * Errors in callbacks are issues as warnings and the current job is